# aleo-scope-monorepo

./: .gitmodules  README.md  SCOPE.md
core/snarkOS/: .gitignore  AGENTS.md  CI.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  version_env.rs
core/snarkOS/.cargo/: audit.toml
core/snarkOS/.ci/: bench_bft_sync.sh  bench_cdn_sync.sh  bench_p2p_sync.sh  bench_rest_api.sh  generate_ledger.sh  rest_api_helper.py  test_db_backup.sh  test_dev_on_prod_restart.sh  test_devnet.sh  test_full_upgrade.sh  test_partial_upgrade.sh  test_reset_minority.sh  test_restart_all.sh  test_restart_majority.sh  utils.sh
core/snarkOS/.circleci/: config.yml
core/snarkOS/.devnet/: start.sh
core/snarkOS/.github/workflows/: benchmarks.yml  release.yml
core/snarkOS/.resources/: license_header
core/snarkOS/account/: Cargo.toml
core/snarkOS/account/src/: lib.rs
core/snarkOS/cli/: Cargo.toml  build.rs
core/snarkOS/cli/src/: lib.rs
core/snarkOS/cli/src/commands/: account.rs  clean.rs  mod.rs  start.rs  update.rs
core/snarkOS/cli/src/commands/account/: sign.rs
core/snarkOS/cli/src/commands/developer/: decrypt.rs  deploy.rs  execute.rs  mod.rs  scan.rs  transfer_private.rs
core/snarkOS/cli/src/helpers/: args.rs  bech32m.rs  dev.rs  dynamic_format.rs  fd_check.rs  log_writer.rs  logger.rs  mod.rs  updater.rs
core/snarkOS/cli/tests/: e2e.rs
core/snarkOS/display/: Cargo.toml
core/snarkOS/display/src/: lib.rs  tabs.rs
core/snarkOS/display/src/pages/: logs.rs  mod.rs  overview.rs
core/snarkOS/docs/: slipstream_plugins.md
core/snarkOS/node/: Cargo.toml
core/snarkOS/node/bft/: Cargo.toml  README.md
core/snarkOS/node/bft/events/: Cargo.toml
core/snarkOS/node/bft/events/src/: batch_certified.rs  batch_propose.rs  batch_signature.rs  block_request.rs  block_response.rs  certificate_request.rs  certificate_response.rs  challenge_request.rs  challenge_response.rs  committee_prop_tests.rs  disconnect.rs  lib.rs  primary_ping.rs  transmission_request.rs  transmission_response.rs  validators_request.rs  validators_response.rs  worker_ping.rs
core/snarkOS/node/bft/events/src/helpers/: codec.rs  mod.rs
core/snarkOS/node/bft/examples/: monitor.rs  simple_node.rs
core/snarkOS/node/bft/ledger-service/: Cargo.toml  README.md
core/snarkOS/node/bft/ledger-service/src/: ledger.rs  lib.rs  mock.rs  prover.rs  traits.rs  translucent.rs
core/snarkOS/node/bft/src/: bft.rs  gateway.rs  lib.rs  primary.rs  worker.rs
core/snarkOS/node/bft/src/helpers/: cache.rs  channels.rs  dag.rs  mod.rs  partition.rs  pending.rs  proposal.rs  proposal_cache.rs  ready.rs  signed_proposals.rs  storage.rs  telemetry.rs  timestamp.rs
core/snarkOS/node/bft/src/primary/: proposal_task.rs
core/snarkOS/node/bft/src/sync/: mod.rs
core/snarkOS/node/bft/storage-service/: Cargo.toml
core/snarkOS/node/bft/storage-service/src/: lib.rs  memory.rs  persistent.rs  traits.rs
core/snarkOS/node/bft/tests/: bft_e2e.rs  gateway_e2e.rs  narwhal_e2e.rs
core/snarkOS/node/bft/tests/common/: mod.rs  primary.rs  test_peer.rs  utils.rs
core/snarkOS/node/bft/tests/components/: mod.rs  pending.rs  worker.rs
core/snarkOS/node/cdn/: Cargo.toml  build.rs
core/snarkOS/node/cdn/src/: blocks.rs  lib.rs
core/snarkOS/node/consensus/: Cargo.toml  README.md
core/snarkOS/node/consensus/src/: lib.rs  transactions_queue.rs
core/snarkOS/node/metrics/: Cargo.toml
core/snarkOS/node/metrics/src/: lib.rs  names.rs
core/snarkOS/node/network/: Cargo.toml  README.md  build.rs
core/snarkOS/node/network/src/: lib.rs  node_type.rs  peer.rs  peering.rs  resolver.rs
core/snarkOS/node/rest/: Cargo.toml  build.rs
core/snarkOS/node/rest/src/: lib.rs  routes.rs  version.rs
core/snarkOS/node/rest/src/helpers/: auth.rs  error.rs  mod.rs  path.rs
core/snarkOS/node/router/: Cargo.toml
core/snarkOS/node/router/messages/: Cargo.toml
core/snarkOS/node/router/messages/src/: block_request.rs  block_response.rs  challenge_request.rs  challenge_response.rs  disconnect.rs  lib.rs  peer_request.rs  peer_response.rs  ping.rs  pong.rs  puzzle_request.rs  puzzle_response.rs  unconfirmed_solution.rs  unconfirmed_transaction.rs
core/snarkOS/node/router/messages/src/helpers/: codec.rs  mod.rs  (+1 more)
core/snarkOS/node/router/src/: handshake.rs  heartbeat.rs  inbound.rs  lib.rs  outbound.rs  routing.rs  writing.rs
core/snarkOS/node/router/src/helpers/: cache.rs  mod.rs
core/snarkOS/node/router/tests/: banning.rs  cleanups.rs  connect.rs  disconnect.rs  heartbeat.rs
core/snarkOS/node/router/tests/common/: mod.rs  router.rs
core/snarkOS/node/src/: lib.rs  node.rs  traits.rs
core/snarkOS/node/src/bootstrap_client/: codec.rs  handshake.rs  mod.rs  network.rs
core/snarkOS/node/src/client/: mod.rs  router.rs
core/snarkOS/node/src/prover/: mod.rs  router.rs
core/snarkOS/node/src/validator/: mod.rs  router.rs
core/snarkOS/node/sync/: Cargo.toml
core/snarkOS/node/sync/communication-service/: Cargo.toml
core/snarkOS/node/sync/communication-service/src/: lib.rs
core/snarkOS/node/sync/locators/: Cargo.toml
core/snarkOS/node/sync/locators/src/: block_locators.rs  lib.rs
core/snarkOS/node/sync/src/: block_sync.rs  lib.rs  ping.rs
core/snarkOS/node/sync/src/block_sync/: helpers.rs  metrics.rs  sync_state.rs
core/snarkOS/node/sync/src/helpers/: mod.rs
core/snarkOS/node/tcp/: Cargo.toml
core/snarkOS/node/tcp/src/: lib.rs  tcp.rs
core/snarkOS/node/tcp/src/helpers/: banned_peers.rs  config.rs  connections.rs  known_peers.rs  mod.rs  stats.rs
core/snarkOS/node/tcp/src/protocols/: disconnect.rs  handshake.rs  mod.rs  on_connect.rs  reading.rs  writing.rs
core/snarkOS/node/tests/: disconnect.rs  handshake.rs  peering.rs
core/snarkOS/node/tests/common/: mod.rs  node.rs  test_peer.rs
core/snarkOS/scripts/: backup.sh  chaotic-network-runner.sh  delay-network.sh  devnet.sh  lint.sh  run-core-client.sh  run-outer-client.sh  run-prover.sh  run-validator.sh
core/snarkOS/snarkos/: main.rs
core/snarkOS/utilities/: Cargo.toml  README.md
core/snarkOS/utilities/src/: callback_handle.rs  lib.rs  node_data.rs  signals.rs
(+92 files in other folders)
