[package]
name = "snarkos"
version = "4.7.4"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "account",
  "cli",
  "display",
  "node",
  "node/bft",
  "node/bft/events",
  "node/bft/ledger-service",
  "node/bft/storage-service",
  "node/cdn",
  "node/consensus",
  "node/metrics",
  "node/network",
  "node/rest",
  "node/router",
  "node/router/messages",
  "node/sync",
  "node/sync/communication-service",
  "node/sync/locators",
  "node/tcp",
  "utilities",
]

[workspace.dependencies.aleo-std]
version = "1.0.1"
default-features = false

[workspace.dependencies.snarkvm]
#path = "../snarkVM"
git = "https://github.com/ProvableHQ/snarkVM.git"
rev = "9d8ed0ce1"
#version = "=4.7.3"

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.axum]
version = "0.8"

[workspace.dependencies.axum-extra]
version = "0.10"

[workspace.dependencies.base64]
version = "0.22"

[workspace.dependencies.bincode]
version = "1"

[workspace.dependencies.built]
version = "0.8"
features = ["git2"]

[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.cfg-if]
version = "1"

[workspace.dependencies.clap]
version = "4.5"
default-features = false
features = [ "std" ]

[workspace.dependencies.colored]
version = "3"

[workspace.dependencies.crossterm]
version = "0.29"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.futures-util]
version = "0.3"

[workspace.dependencies.locktick]
version = "0.5"

[workspace.dependencies.lru]
version = "0.16"

[workspace.dependencies.num_cpus]
version = "1"

[workspace.dependencies.once_cell]
version = "1"

[workspace.dependencies.proptest]
# Pin to 1.6 to match the version used in snarkVM. Avoids pulling in rand >=0.9.
version = "1.6"

[workspace.dependencies.rayon]
version = "1"

[workspace.dependencies.thiserror]
version = "2"

[workspace.dependencies.time]
version = "0.3"

[workspace.dependencies.tokio]
version = "1.48"

[workspace.dependencies.tokio-util]
version = "0.7"

[workspace.dependencies.http]
# Pin to 1.3.1 until https://github.com/ProvableHQ/snarkOS/issues/4275 is fixed
version = "=1.3.1"

[workspace.dependencies.itertools]
version = "0.14"

[workspace.dependencies.indexmap]
version = "2"
default-features = false

[workspace.dependencies.serde]
version = "1"
default-features = false

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.parking_lot]
version = "0.12"

[workspace.dependencies.rand]
version = "0.10"
default-features = false

[workspace.dependencies.rand_chacha]
version = "0.10"
default-features = false

[workspace.dependencies.rand_distr]
version = "0.6"

[workspace.dependencies.reqwest]
version = "0.13"

[workspace.dependencies.smol_str]
version = "=0.3.2" # Update after Rust >1.88

[workspace.dependencies.tracing]
version = "0.1"
default-features = false

[workspace.dependencies.tracing-test]
version = "0.2"

[workspace.dependencies.tracing-subscriber]
# TODO remove this once colored logs work again in a newer version
# See: https://github.com/tokio-rs/tracing/issues/3378
version = "=0.3.19"

[workspace.dependencies.test-strategy]
version = "0.4"

[workspace.dependencies.test-log]
version = "0.2"

[workspace.dependencies.snarkos-account]
path = "account"
version = "=4.7.3"

[workspace.dependencies.snarkos-cli]
path = "cli"
version = "=4.7.3"

[workspace.dependencies.snarkos-display]
path = "display"
version = "=4.7.3"

[workspace.dependencies.snarkos-node]
path = "node"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-bft]
path = "node/bft"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-bft-events]
path = "node/bft/events"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-bft-storage-service]
path = "node/bft/storage-service"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-bft-ledger-service]
path = "node/bft/ledger-service"
version = "=4.7.3"
default-features = false

[workspace.dependencies.snarkos-node-consensus]
path = "node/consensus"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-cdn]
path = "node/cdn"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-metrics]
path = "node/metrics"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-network]
path = "node/network"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-router]
path = "node/router"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-router-messages]
path = "node/router/messages"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-rest]
path = "node/rest"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-sync]
path = "node/sync"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-sync-communication-service]
path = "node/sync/communication-service"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-sync-locators]
path = "node/sync/locators"
version = "=4.7.3"

[workspace.dependencies.snarkos-node-tcp]
path = "node/tcp"
version = "=4.7.3"

[workspace.dependencies.snarkos-utilities]
path = "utilities"
version = "=4.7.3"

[[bin]]
name = "snarkos"
path = "snarkos/main.rs"

[features]
default = [ "snarkos-cli/metrics", "snarkos-node-metrics", "snarkos-node/metrics", "snarkos-node-cdn/metrics", "telemetry" ]
history = [ "snarkos-node/history" ]
history-staking-rewards = [ "snarkos-node/history-staking-rewards" ]
slipstream-plugins = [ "snarkos-node/slipstream-plugins", "snarkos-cli/slipstream-plugins" ]
telemetry = [ "snarkos-node/telemetry" ]
cuda = [
  "snarkos-account/cuda",
  "snarkos-cli/cuda",
  "snarkos-node/cuda",
  "snarkos-node-bft/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-consensus/cuda",
  "snarkos-node-rest/cuda",
  "snarkos-node-router/cuda",
  "snarkos-node-sync/cuda"
]
locktick = [
  "dep:locktick",
  "snarkos-node/locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-consensus/locktick",
  "snarkos-node-metrics/locktick",
  "snarkos-node-rest/locktick",
  "snarkos-node-router/locktick",
  "snarkos-node-sync/locktick",
  "snarkos-node-tcp/locktick",
  "snarkvm/locktick"
]
serial = [
  "snarkos-cli/serial",
  "snarkos-node/serial",
  "snarkos-node-bft/serial",
  "snarkos-node-consensus/serial",
  "snarkos-node-metrics/serial",
  "snarkos-node-rest/serial",
  "snarkos-node-router/serial",
  "snarkos-node-sync/serial",
  "snarkvm/serial"
]
test_targets = [ "snarkos-cli/test_targets" ]
test_consensus_heights = [ "snarkos-cli/test_consensus_heights" ]
test_network = [ "snarkos-cli/test_network", "snarkos-node/test_network" ]
tokio_console = [ "snarkos-cli/tokio_console" ]

[dependencies.clap]
workspace = true
features = [ "derive" ]

[dependencies.locktick]
workspace = true
optional = true

[dependencies.snarkos-account]
workspace = true

[dependencies.snarkos-cli]
workspace = true

[dependencies.snarkos-node]
workspace = true

[dependencies.snarkos-node-bft]
workspace = true

[dependencies.snarkos-node-cdn]
workspace = true

[dependencies.snarkos-node-consensus]
workspace = true

[dependencies.snarkos-node-metrics]
workspace = true
optional = true

[dependencies.snarkos-node-router]
workspace = true

[dependencies.snarkos-node-rest]
workspace = true

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkos-node-tcp]
workspace = true

[dependencies.snarkvm]
workspace = true

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.6"

[dependencies.tracing]
workspace = true

# Pinned to =0.14.0-rc.29 because k256 v0.14.0-rc.8 does not implement the
# MulVartime/MulByGeneratorVartime traits added in elliptic-curve v0.14.0-rc.31.
# Adding this as a direct dependency forces cargo to resolve the exact version
# and prevents automatic upgrades to incompatible RC releases.
[dependencies.elliptic-curve]
version = "=0.14.0-rc.29"
default-features = false

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.built]
workspace = true

[build-dependencies.toml]
version = "0.9"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
# uncomment the 2 lines below when building with the locktick feature or use the `release-locktick` profile
# debug = "line-tables-only"
# strip = "none"

[profile.release-locktick]
inherits = "release"
debug = "line-tables-only"
strip = "none"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "off"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true

[package.metadata.cargo-machete]
ignored = [
  "elliptic-curve", # Needed to pin the crate to a specific version
  "snarkos-account", # Needed for cuda feature
  "snarkos-node", # Needed for metrics feature
  "snarkos-node-bft", # Needed for cuda and locktick features
  "snarkos-node-cdn", # Needed for cuda and locktick features
  "snarkos-node-consensus", # Needed for cuda and locktick features
  "snarkos-node-tcp", # Needed for locktick feature
  "snarkos-node-rest", # Needed for cuda and locktick features
  "snarkos-node-sync", # Needed for cuda and locktick features
  "snarkos-node-router", # Needed for cuda and locktick features
  "snarkos-node-metrics", # Needed for locktick feature
]
