[package]
name = "snarkos-display"
version = "4.7.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A display for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [ "snarkos-node/locktick", "snarkos-utilities/locktick" ]
serial = [ "snarkvm/serial" ]

[dependencies.anyhow]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.ratatui]
version = "0.30"
default-features = false
features = ["crossterm", "layout-cache", "macros", "underline-color"]

[dependencies.snarkos-node]
workspace = true

[dependencies.snarkos-utilities]
workspace = true

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "rt" ]
