[package]
name = "snarkos-utilities"
version = "4.7.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Utilities for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
test_network = [ ]

[dependencies.anyhow]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt", "signal", "sync" ]

[dependencies.tracing]
workspace = true

[dependencies.locktick]
optional = true
workspace = true

[dependencies.parking_lot]
workspace = true